--- a/index.html
+++ b/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Meta Tags -->
-    <meta description="API Collaboration" content="JavaScript API Exercise">
-    
-    <!-- TEAM, ADD your names to the author list here! -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Meta Tags -->
+  <meta description="API Collaboration" content="JavaScript API Exercise">
+  <!-- TEAM, ADD your names to the author list here! -->
   <meta name="Ruth Gough, Chris Hunley" content="TEAM 9 3/4 Collaboration of API Code Assignment">
-    <!-- add css here if we want it! -->
-    <title>9¾ API</title>
+  <link rel="stylesheet" href="style.css">
+  <title>9¾ API</title>
 </head>
 <body>
-  <section id="main">
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a class="active" href="#about">About</a>
-      <i class="fas fa-mars-double"></i>
-      <i class="fas fa-venus-double"></i>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>        
-    </div>
-    <div id="photo-container">
+  <div id="photo-container">
     <a href="aditya-vyas-wmXVABZ7JBk-unsplash.jpg"></a>
-    </div>
-    <div id="content">
-        <h1>Harry Potter Characters</h1>
-        <a href="#about" id="click">About</a>
-      </div>
+  </div>
+  <div id="content">
+    <h1>Harry Potter Characters</h1>
+    <a href="#about" id="click">About</a>
+  </div>
   </section>
-    <!-- add .js here! -->
+  <!-- add .js here! -->
 </body>
 </html>
