Added api.html and script.js

--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 <body>
   <div id="photo-container">
     <a href="aditya-vyas-wmXVABZ7JBk-unsplash.jpg"></a>
-  </div>
-  <div id="content">
     <h1>Harry Potter Characters</h1>
-    <a href="#about" id="click">About</a>
+    <a href="api.html" id="click">About</a>
   </div>
-  </section>
-  <!-- add .js here! -->
+
+ <script src="script.js"></script>
 </body>
 </html>
